objects/Joint_Business_Plan__c.object
<CustomObject>
    <description>R5 Joint Business Plan</description>
    <fields>
        <fullName>ABB_Overview_Flag__c</fullName>
        <description>R5- Flag update for Must have</description>
        <formula>IF( ABB_Overview_Info__c = &quot;Must Have&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Overview_Info__c</fullName>
        <description>R5 - Field will have the &quot;Must Have&quot; value</description>
        <label>ABB Overview Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Overview__c</fullName>
        <description>R5 - Overview of ABB</description>
        <inlineHelpText>Short description of the part of the ABB organization involved in this Business Plan</inlineHelpText>
        <label>ABB Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <description>SFDC-4190 - Account GUID</description>
        <formula>Account__r.GUID__c</formula>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Joint_Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Filled_Fields_Count__c</fullName>
        <label>Action Filled Fields Count</label>
        <summarizedField>Joint_Business_Plan_Actions__c.Filled_fields_count1__c</summarizedField>
        <summaryForeignKey>Joint_Business_Plan_Actions__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Action_of_Completeness__c</fullName>
        <formula>IF (Actions_RollUp__c == 0 ,0,IF( Action_Filled_Fields_Count__c == 0, 0.5, 0.5 + ((Action_Filled_Fields_Count__c / (Actions_RollUp__c * VALUE($Label.Sys_Total_Fields_in_Action ))) / 2) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This percentage is calculated based on the Fields of the Actions associated to this Business Plan. 
These are specifically: Name, Registered Date, Partner Responsible, ABB Responsible, Type, Priority, Deadline and Status.</inlineHelpText>
        <label>Action: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actions_Record_Required__c</fullName>
        <description>R5 - Field will have Flag</description>
        <formula>IF(Actions_RollUp__c = 0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Mandatory section of &quot;Business Plan&quot;. Add in &quot;Actions&quot; section below</inlineHelpText>
        <label>Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_RollUp__c</fullName>
        <description>R5 - field to rollup the JBP Action records. Used in JBP status change validation rule</description>
        <label>Actions RollUp</label>
        <summaryForeignKey>Joint_Business_Plan_Actions__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Year_to_Date_Formula__c</fullName>
        <description>R5 - Actual Sales Year to Date</description>
        <formula>Actual_Sales_Year_to_Date__c</formula>
        <label>Actual Sales Year to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Year_to_Date__c</fullName>
        <description>R5 - Actual Sales Year to Date</description>
        <label>Actual Sales Year to Date</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>After_Sales_and_Warranties_Info__c</fullName>
        <description>R5- Field to show the &quot;Must Have&quot;</description>
        <label>After Sales and Warranties Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_sales_and_warranties1__c</fullName>
        <inlineHelpText>What kind of after sales and warranty arrangement, terms and processes have been agreed by the partner and ABB. If they are attached to agreement, indicate that</inlineHelpText>
        <label>After sales and warranties</label>
        <length>2555</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>After_sales_and_warranties__c</fullName>
        <description>R5-After sales and warranties</description>
        <inlineHelpText>What kind of after sales and warranty arrangement, terms and processes have been agreed by the partner and ABB. If they are attached to agreement, indicate that</inlineHelpText>
        <label>After sales and warranties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>R5 - Approval Date</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>R5 - Approval Status</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>R5 - Approver Name</description>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Flag__c</fullName>
        <description>R5 - Flag field to display when Assigned To is not filled</description>
        <formula>IF( ISBLANK( Assigned_To__c ) , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager__c</fullName>
        <description>R6: To send delayed review mail to Assigned to user manager</description>
        <label>Assigned To Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Assigned To</description>
        <inlineHelpText>ABB person responsible for executing, supporting and following up this plan and keeping it up-to-date.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_s_Covered__c</fullName>
        <description>R5 - BU&apos;s Covered</description>
        <formula>Channel_Market_Coverage__r.BU_Covered__c</formula>
        <inlineHelpText>Values based on the chosen Product Mix under the Market Scope</inlineHelpText>
        <label>BU&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUs_covered_text_copy__c</fullName>
        <label>BUs covered text copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Current_Year__c</fullName>
        <description>R5 - Budget Current Year</description>
        <label>Budget Current Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Current_Year_formula__c</fullName>
        <description>R5 - Budget Current Year formula</description>
        <formula>Budget_Current_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Transferred_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Plan Transferred From</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Channel Partner Business Plans</relationshipLabel>
        <relationshipName>Channel_Partner_Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Transferred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Plan Transferred To</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Channel Partner Business Plans (Business Plan Transferred To)</relationshipLabel>
        <relationshipName>Channel_Partner_Business_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Plan_of_Completeness__c</fullName>
        <description>R6. This field will be calculated by workflow field update</description>
        <inlineHelpText>This field will calculate the completion of the Fields that should be filled on the Business Plan Record itself. In order to change it make sure Fields on the Business Plan are filled in.</inlineHelpText>
        <label>Business Plan Header</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CP_Owner_First_Name__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Market_Coverage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>R5 - Lookup to Channel Market Coverage</description>
        <inlineHelpText>Channel &quot;Market scope&quot; this business plan is related to</inlineHelpText>
        <label>Market Scope</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Channel_Market_Coverage__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Channel_Market_Coverage__c</referenceTo>
        <relationshipLabel>Channel Partner Business Plans</relationshipLabel>
        <relationshipName>Joint_Business_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Company_Description__c</fullName>
        <description>R5 - Text field to check Company Description is filled or not and it is also used for the Flag formula field.</description>
        <label>Check Company Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Operation_Overview1_Flag__c</fullName>
        <description>R5- Flag update for Must have</description>
        <formula>IF(  Co_operation_Overview_1_Info__c = &quot;Must Have&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Operation_Overview2_Flag__c</fullName>
        <description>R5- Flag update for Must have</description>
        <formula>IF(  Co_operation_Overview_2_Info__c = &quot;Must Have&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_operation_Overview_123__c</fullName>
        <description>It Is Used for X-Author Document</description>
        <inlineHelpText>Describe how the partner fits into ABB´s business strategy. Include territory, industry branch and product mix considerations.</inlineHelpText>
        <label>Partner&apos;s fit to ABB’s business strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Co_operation_Overview_1_Info__c</fullName>
        <description>R5 - Field will have the &quot;Must Have&quot; value</description>
        <label>ABB’s fit to business strategy Acc Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_operation_Overview_1__c</fullName>
        <description>R5-Co-operation Overview 1</description>
        <inlineHelpText>Describe how ABB fits into the partner&apos;s business and territory strategy. Include both short term fit and also the fit based to the defined long term company mission, vision and strategy</inlineHelpText>
        <label>ABB’s fit to partner&apos;s business strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Co_operation_Overview_2_Info__c</fullName>
        <description>R5 - Field will have the &quot;Must Have&quot; value</description>
        <label>Account fit to the ABB’s business Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_operation_Overview_2__c</fullName>
        <description>R5-Co-operation Overview 2</description>
        <inlineHelpText>Describe how the partner fits into ABB´s business strategy. Include territory, industry branch and product mix considerations.</inlineHelpText>
        <label>Partner&apos;s fit to ABB’s business strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Description_Flag__c</fullName>
        <description>R5 - Flag is displayed when Company Description is not filled.</description>
        <formula>IF(ISBLANK( Check_Company_Description__c ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <inlineHelpText>Update the content in section &quot;Channel Partner Common Data&quot; under ACCOUNT</inlineHelpText>
        <label>Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_strategy__c</fullName>
        <description>R5- Company strategy</description>
        <inlineHelpText>Describe how the Partner&apos;s Vision will be achieved.</inlineHelpText>
        <label>Company strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors_Count__c</fullName>
        <description>R6: Total Number of Competitors</description>
        <label>Competitors Count</label>
        <summaryForeignKey>Competitors__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Competitors_Filled_Fields_Count__c</fullName>
        <description>R6</description>
        <label>Competitors: Filled Fields Count</label>
        <summarizedField>Competitors__c.Filled_fields_count__c</summarizedField>
        <summaryForeignKey>Competitors__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Competitors_of_Completeness__c</fullName>
        <description>R6</description>
        <formula>IF (Competitors_Count__c == 0,0, IF( Competitors_Filled_Fields_Count__c == 0, 0.5 , 0.5 +  ((Competitors_Filled_Fields_Count__c / (Competitors_Count__c * VALUE($Label.Sys_Total_Fields_in_Competitors ))) / 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This percentage is calculated based on the Fields of the Competitors assoc. to the Business Plan. 
These Fields are: Main Competitors, Focused Industry, Main competitive Products, Strengths, Weaknesses, Strengths against Comp., Weaknesses against Comp.</inlineHelpText>
        <label>Competitors: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Roles_Filled_fields_count__c</fullName>
        <description>R6: To calculate % of completeness by total editable fields and the number of  filled fields</description>
        <label>Contact Roles: Filled fields count</label>
        <summarizedField>Joint_Business_Plan_Contact_Role__c.Filled_fields_count__c</summarizedField>
        <summaryForeignKey>Joint_Business_Plan_Contact_Role__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Roles_Record_Required__c</fullName>
        <description>R5 - Field will have Flag</description>
        <formula>IF( JBP_Contact_Role_Rollup__c = 0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Mandatory section of &quot;Business Plan&quot;. Add in &quot;Channel Partner Contact Roles&quot; section below</inlineHelpText>
        <label>Channel Partner Contact Roles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Roles_of_Completeness__c</fullName>
        <description>R6</description>
        <formula>IF( JBP_Contact_Role_Rollup__c == 0,0,IF( Contact_Roles_Filled_fields_count__c == 0, 0.5, 0.5 + ((Contact_Roles_Filled_fields_count__c / (JBP_Contact_Role_Rollup__c * VALUE($Label.Sys_Total_Fields_in_Contact_Roles  ))) / 2) ))</formula>
        <inlineHelpText>This percentage is calculated based on the Fields of the Contact Roles associated to this Business Plan. 
These are specifically: Product Lines and Role from ABB Perspective.</inlineHelpText>
        <label>Contact Roles: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_for_Next_Review_Flag__c</fullName>
        <description>R5 - Flag field to display when Date for Next Review is not filled.</description>
        <formula>IF( ISBLANK( Date_for_Next_Review__c ), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_for_Next_Review__c</fullName>
        <description>R5 - Date for Next Review</description>
        <inlineHelpText>Define the date by which the next business review should be executed. Create yourself a task to remember.</inlineHelpText>
        <label>Date for Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <description>R5 - Date of Completion when the Status is changed to Completed.</description>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_actual_sales_YTD_is_given__c</fullName>
        <label>Date the  actual sales  YTD is given</label>
        <summarizedField>Joint_Business_Plan_Product_Lines__c.Actual_Year_to_Date_Changed_on__c</summarizedField>
        <summaryForeignKey>Joint_Business_Plan_Product_Lines__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date Field</description>
        <inlineHelpText>The date the plan ends to be effective, typically Dec31st of the year</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_ABB_offering_Flag__c</fullName>
        <description>R5 - Flag is displayed when Existing ABB offering is not filled.</description>
        <formula>IF(ISBLANK( Existing_ABB_offering__c ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_ABB_offering__c</fullName>
        <inlineHelpText>Update the content in section &quot;Existing suppliers/Partners&quot; under MARKET SCOPE</inlineHelpText>
        <label>Existing ABB offering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_User_Type__c</fullName>
        <description>Created as part of R2.0 to hold partner owner type</description>
        <globalPicklist>External_User_Type</globalPicklist>
        <label>External User Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>CASE( Owner:User.Profile.Name, 
$Label.SYS_ABBExtChannelPartnerCommunityUser, $Label.SYS_Ext_Channel_Partner, 
$Label.SYS_ABB_Ext_Agent_Community_User, $Label.SYS_Ext_Agent , 
$Label.SYS_ABB_Ext_Rep_Community_User, $Label.SYS_Ext_Support,$Label.SYS_Created_by_ABB)</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Ongoing_Year_Formula__c</fullName>
        <description>R5 - Forecast Ongoing Year Formula</description>
        <formula>Forecast_ongoing_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_ongoing_year__c</fullName>
        <description>R5 - Forecast current year</description>
        <label>Forecast current year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Information_Sharing_Flag__c</fullName>
        <description>R5 - Field for Flag</description>
        <formula>IF( Information_Sharing_Info__c = &quot;Must Have&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Sharing_Info__c</fullName>
        <description>R5 - Field to display &quot;Must Have&quot; value</description>
        <label>Information Sharing Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Sharing__c</fullName>
        <description>R5-Information Sharing</description>
        <label>Information Sharing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Logged_in__c</fullName>
        <formula>IF ($User.Id == OwnerId, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner Logged in?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Plan_Assigned_to_Logged_In_User__c</fullName>
        <formula>IF ($User.Id ==  Assigned_To__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Plan Assigned to Logged In User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBP_Contact_Role_Rollup__c</fullName>
        <description>R5 - field to rollup the JBP Contact Role records. Used in JBP status change validation rule</description>
        <label>JBP Contact Role Rollup</label>
        <summaryForeignKey>Joint_Business_Plan_Contact_Role__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JBP_MarketCoverage_Rollup__c</fullName>
        <description>R5 - field to rollup the JBP MarketCoverage records. Used in JBP status change validation rule</description>
        <label>JBP MarketCoverage Rollup</label>
        <summaryForeignKey>Joint_Business_Plan_Market_Coverage__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JBP_ProdLine_Rollup__c</fullName>
        <description>R5 - field created to validate the Joint business plan must have at lease 1 record when changing the JBP status to, in approval or closed</description>
        <label>JBP ProdLine Rollup</label>
        <summaryForeignKey>Joint_Business_Plan_Product_Lines__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_review_of_the_business_Plan__c</fullName>
        <description>R6</description>
        <label>Last completed business review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late__c</fullName>
        <formula>IF(Date_for_Next_Review__c &lt; Today(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logistics_Flag__c</fullName>
        <description>R5 - Flag update for Must have</description>
        <formula>IF(  Logistics_Info__c = &quot;Must Have&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics_Info__c</fullName>
        <description>R5 - Field will have the &quot;Must Have&quot; value</description>
        <label>Logistics Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistics__c</fullName>
        <description>R5-Logistics</description>
        <label>Logistics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Coverage_Filled_Fields_Count__c</fullName>
        <label>Market Coverage: Filled Fields Count</label>
        <summarizedField>Joint_Business_Plan_Market_Coverage__c.Filled_fields_count__c</summarizedField>
        <summaryForeignKey>Joint_Business_Plan_Market_Coverage__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Market_Coverage_of_Completeness__c</fullName>
        <formula>IF (JBP_MarketCoverage_Rollup__c == 0,0, IF( Market_Coverage_Filled_Fields_Count__c   == 0, 0.5, 0.5 + ((Market_Coverage_Filled_Fields_Count__c  / (JBP_MarketCoverage_Rollup__c * VALUE($Label.Sys_Total_Fields_in_Market_Coverage ))) / 2) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This percentage is calculated based on the Fields of the Market Coverage associated to this Business Plan. 
These are: Focus, Target Sales this Year, Growth Potential, Current Business, Strength, Market Position, Product Lines, Sales, ABB Target Sales</inlineHelpText>
        <label>Market Coverage: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Coverages_Record_Required__c</fullName>
        <description>R5 - Field will have Flag</description>
        <formula>IF(JBP_MarketCoverage_Rollup__c = 0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Mandatory section of &quot;Business Plan&quot;. Define in &quot;Market Coverages&quot; section below</inlineHelpText>
        <label>Market Coverages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_statement__c</fullName>
        <description>R5- Mission Statement</description>
        <inlineHelpText>Describe shortly the partner&apos;s purpose to be in the business.</inlineHelpText>
        <label>Mission statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mutually_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Mutually Agreed</description>
        <inlineHelpText>Tick this box in case this plan is agreed by both partner and ABB. Will turn back to NO when active plan is changed to &quot;draft&quot; (e.g. for changing validity period)</inlineHelpText>
        <label>Mutually Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_ID__c</fullName>
        <description>created as part of R6</description>
        <label>NPS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type_Value__c</fullName>
        <description>R5 Field to capture the Old Record Type Value</description>
        <label>Old Record Type Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>R5 - Opportunities</description>
        <inlineHelpText>Describe the opportunities when the partner and ABB are co-operating as described in this plan</inlineHelpText>
        <label>Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PG_s_Covered__c</fullName>
        <description>R5 - PG&apos;s Covered</description>
        <formula>Channel_Market_Coverage__r.PG_Covered__c</formula>
        <inlineHelpText>Values based on the chosen Product Mix under the Market Scope</inlineHelpText>
        <label>PG&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <description>It was created for X-Author Template, it will store the current Year-1.</description>
        <formula>TEXT(YEAR(Start_Date__c)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account.</description>
        <formula>TEXT( Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Class__c</fullName>
        <description>R5 - Primary Channel Class</description>
        <formula>TEXT(Channel_Market_Coverage__r.Primary_Channel_Class__c )</formula>
        <inlineHelpText>Presents the channel class defined in &quot;Market scope&quot; where possible update must be done.</inlineHelpText>
        <label>Channel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines_Record_Required__c</fullName>
        <description>R5 - Field will have Flag</description>
        <formula>IF(JBP_ProdLine_Rollup__c = 0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mandatory section of &quot;Business Plan&quot;. Define in &quot;Sales Targets &amp; Results&quot; section below</inlineHelpText>
        <label>Sales Targets &amp; Results</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <description>R5 - Relationship Status</description>
        <formula>TEXT(Channel_Market_Coverage__r.Relationship_Status__c)</formula>
        <inlineHelpText>Presents the relationship status defined in &quot;Market scope&quot;, where any update must be done</inlineHelpText>
        <label>Relationship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>R6 - Created as part of  Work ID 318 . This field is used in &quot;Plans for Next Review Summary&quot; Report</description>
        <formula>IF( Date_for_Next_Review__c &lt; Today(),&quot;1.Overdue&quot;,IF(Date_for_Next_Review__c &gt;= Today()&amp;&amp; Date_for_Next_Review__c &lt;= Today()+15,&quot;2.Upcoming&quot;,IF(Date_for_Next_Review__c &gt; Today()+15,&quot;3.Future&quot;,NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Review Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID__c</fullName>
        <formula>Account__r.Root_Account_GUID__c</formula>
        <label>Root Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rund_Rate_Ongoing_year_Formula__c</fullName>
        <description>R5 - Rund Rate Ongoing year Formula</description>
        <formula>Rund_Rate_Ongoing_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run Rate Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rund_Rate_Ongoing_year__c</fullName>
        <description>R5 - Run Rate Current year</description>
        <label>Run Rate Current year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STS_Community_XA_Contracts_del__c</fullName>
        <description>STS PR2.0 Formula field to set up XA Contracts</description>
        <formula>HYPERLINK(&quot;/abbpartners/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Channel Partner Business Plans&quot;,&quot;Generate&quot;)</formula>
        <inlineHelpText>Click GENERATE button to create a standard format file from the content. You can choose between several file formats and languages. (For community Partners and Reps)</inlineHelpText>
        <label>Print Document</label>
        <type>Text</type>
    </fields>
</CustomObject>